controller: introduce simplest cache mechanism log: disable logging whose level is lower than [WARN]
Signed-off-by: racaljk <1948638989@qq.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -323,6 +323,7 @@
                 this.high_representation = eval('('+res.classfile_json_high+')');
                 this.low_representation = eval('('+res.classfile_json_low+')');
                 // Delay more computations until they actually are requested;
+                console.log(this.low_representation);
             },
         }
     })
